--- a/WatchTests Test Runner WatchKit App/Info.plist
+++ b/WatchTests Test Runner WatchKit App/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>ClaspTestRunner WatchKit App</string>
+	<string>WatchTests Test Runner WatchKit App</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -26,7 +26,7 @@
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 	<key>WKCompanionAppBundleIdentifier</key>
-	<string>com.detroitlabs.Clasp</string>
+	<string>com.detroitlabs.WatchTests</string>
 	<key>WKWatchKitApp</key>
 	<true/>
 </dict>
